# ChangeLog for sys-kernel/lh-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Cleanup metadata.xml

*lh-sources-2.6.38-r1 (30 Mar 2011)

  30 Mar 2011; Justin Lecher <jlec@gentoo.org> lh-sources-2.6.37.ebuild,
  lh-sources-2.6.37-r1.ebuild, lh-sources-2.6.37-r2.ebuild,
  lh-sources-2.6.38.ebuild, +lh-sources-2.6.38-r1.ebuild:
  Version Bump

*lh-sources-2.6.38 (16 Mar 2011)

  16 Mar 2011; Justin Lecher <jlec@gentoo.org>
  +files/2.6.38-file-caching.patch, lh-sources-2.6.37-r2.ebuild,
  +lh-sources-2.6.38.ebuild:
  Version Bump

*lh-sources-2.6.37-r2 (11 Mar 2011)

  11 Mar 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.37-r2.ebuild:
  Version Bump

*lh-sources-2.6.37-r1 (27 Feb 2011)

  27 Feb 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.37-r1.ebuild:
  Version Bump

*lh-sources-2.6.37 (02 Feb 2011)

  02 Feb 2011; Justin Lecher <jlec@gentoo.org>
  +files/2.6.37-file-caching.patch, +lh-sources-2.6.37.ebuild:
  Version Bump

*lh-sources-2.6.35-r15 (28 Jan 2011)

  28 Jan 2011; Justin Lecher <jlec@gentoo.org>
  +files/2.6.35-file-caching.patch, +lh-sources-2.6.35-r15.ebuild,
  +metadata.xml:
  New addition, fixes Largefile support and operation handling, #352149
