@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lh-sources-2.6.38-r2 (17 Apr 2011)
+
+  17 Apr 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.38-r2.ebuild:
+  Version Bump
+
   31 Mar 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Cleanup metadata.xml
 
